fix z-indexing nav bar

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -11,6 +11,8 @@ html {
 .nav-container {
 	background-color: white;
 	padding: 20px;
+	position: relative;
+	z-index: 5;
 }
 
 .logo {
